Update MainPageController.java